<resources>
    <string name="app_name">Digital G10</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="text_enter_pass">رمز عبور نرم افزار را وارد نمایید</string>
    <string name="content_des">content</string>
    <string name="app_name_version">DIGITAL G10 \n Version 2.1</string>
    <integer name="versionCode">10</integer>
    <string name="about_us">
شرکت دیجیتال آلارم با بیش از ۴۰ سال تجربه در زمینه طراحی و تولید سیستم‌های حفاظتی، یکی از پیشگامان صنعت امنیت در ایران است.
\n\n
ما همواره در تلاش هستیم تا با ارائه راهکارهای نوین، امنیت و آرامش را برای مشتریان خود به ارمغان آوریم. ما به اصولی مانند نوآوری، کیفیت و پشتیبانی متعهدیم و با ارائه خدمات پس از فروش حرفه‌ای، رضایت مشتریان را در اولویت قرار می‌دهیم.
\n\n
با ما امنیت را تجربه کنید!
    </string>
</resources>